[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2024"
authors = ["Ferro Spreadsheeter <cs1230592@iitd.ac.in>"]
description = "A high perfromance spreadsheet implementation in Rust"

# Release profile optimization settings
[profile.release]
# Enable link-time optimization for better dead code elimination
lto = true
# Enable thin LTO for faster compile times with similar optimization
# lto = "thin"

# Enable code optimizations for size and speed
opt-level = 3  # Maximum optimization (0-3)
# opt-level = "s"  # Optimize for size
# opt-level = "z"  # Optimize aggressively for size

# Control debug information
debug = false  # No debug information in release build
strip = true   # Strip debug symbols

# Enable additional optimizations
codegen-units = 1   # Reduce to single unit for better optimization
panic = "abort"     # Removes panic unwinding code
incremental = false # Disables incremental compilation in release

[dependencies]
petgraph = "0.6.4"  # Add this for graph visualization
rustyline = "10.0.0"
tempfile = "3.3.0"  

[[bin]]
name = "spreadsheet"
path = "src/main.rs"
