[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2024"
authors = ["Ferro Spreadsheeter <cs1230592@iitd.ac.in>"]
description = "A high perfromance spreadsheet implementation in Rust"

# Define feature flags
[features]
default = []
extensions = ["petgraph", "rustyline", "tempfile"]

# Release profile optimization settings
[profile.release]
# Enable link-time optimization for better dead code elimination
lto = true
# Enable thin LTO for faster compile times with similar optimization
# lto = "thin"

# Enable code optimizations for size and speed
opt-level = 3  # Maximum optimization (0-3)
# opt-level = "s"  # Optimize for size
# opt-level = "z"  # Optimize aggressively for size

# Control debug information
debug = false  # No debug information in release build
strip = true   # Strip debug symbols

# Enable additional optimizations
codegen-units = 1   # Reduce to single unit for better optimization
panic = "abort"     # Removes panic unwinding code
incremental = false # Disables incremental compilation in release

[dependencies]
# Optional dependencies only used with extensions
petgraph = { version = "0.6.4", optional = true }
rustyline = { version = "10.0.0", optional = true }
tempfile = { version = "3.3.0", optional = true }

[[bin]]
name = "spreadsheet"
path = "src/main.rs"
